--- a/Compte-Rendu/aide-decision.tex
+++ b/Compte-Rendu/aide-decision.tex
@@ -988,6 +988,32 @@ ensemble des meilleures actions potentielles = \{a,b,e\}
 \end{minipage}}
 Analyse : TODO 
 \newpage
-\section*{Annexe}
+\section{Annexe}
+\subsection{Description du problème}
+\lstinputlisting{../Probleme.m}
+\subsection{Description des différents objectifs des cadres}
+\subsubsection{Atelier}
 \lstinputlisting{../Atelier.m}
+\subsubsection{Commercial}
+\lstinputlisting{../Commercial.m}
+\subsubsection{Comptable}
+\lstinputlisting{../Comptable.m}
+\subsubsection{Personnel}
+\lstinputlisting{../Personnel.m}
+\subsubsection{Stock}
+\lstinputlisting{../Stock.m}
+\subsection{Point de vue du Responsable d'entreprise}
+\subsubsection{Matrice de gain}
+\lstinputlisting{../MatriceGain.m}
+\subsubsection{Taux de satisfaction}
+\lstinputlisting{../Satisfaction.m}
+\subsection{Selection du meilleur plan de production}
+\subsubsection{Changement d'échelle}
+\lstinputlisting{../changement_echelle.m}
+\subsubsection{Calcul de la concordance}
+\lstinputlisting{../concordance.m}
+\subsubsection{Calcul de la discordance}
+\lstinputlisting{../discordance.m}
+\subsubsection{Seuillage Electre}
+\lstinputlisting{../seuillage_electre.m}
 \end{document}
