--- a/Compte-Rendu/aide-decision.tex
+++ b/Compte-Rendu/aide-decision.tex
@@ -795,7 +795,11 @@ Ce plan correspond à un niveau de réponse aux exigences des différents cadres
         }
     \end{center}
 \end{figure}
-TODO: une belle phrase pour conclure 
+\subsection*{Conclusion}
+La solution qu'on propose est satisfaisante car privilégie le bénéfice et la productivité tout en conservant des valeurs acceptables pour les objectifs des autres cadres.
+
+\noindent Ainsi, dans la partie suivante, nous accorderons d'avantage d'importance aux critères de bénéfice et de productivité.
+
 \section{Sélection du meilleur plan de production}
 Suite aux études précédentes et aux différentes discussions, nous avons retenu 8 propositions de gestion d'atelier (notées de \textbf{\emph{a}} à \textbf{\emph{h}}).\\
 Les décideurs de l'entreprise se sont entendus sur 4 critères à considérer pour décider du meilleur plan de production : le bénéfice, la gestion du stock, l'équilibre commercial (proposer une diversité de produits) et le taux d'utilisation de certaines machines délicates.\\
